[gd_scene load_steps=20 format=2]

[ext_resource path="res://Worlds/LevelFour.gd" type="Script" id=1]
[ext_resource path="res://Tiles/Tiles.tres" type="TileSet" id=2]
[ext_resource path="res://Components/ParallaxBackground1.tscn" type="PackedScene" id=3]
[ext_resource path="res://Components/Disappearing Platform/DisappearingPlatform.tscn" type="PackedScene" id=4]
[ext_resource path="res://Door.tscn" type="PackedScene" id=5]
[ext_resource path="res://Objective.tscn" type="PackedScene" id=6]
[ext_resource path="res://Monster.tscn" type="PackedScene" id=7]
[ext_resource path="res://Components/Portal.tscn" type="PackedScene" id=8]
[ext_resource path="res://Components/Lever.tscn" type="PackedScene" id=9]
[ext_resource path="res://Components/Key.tscn" type="PackedScene" id=10]
[ext_resource path="res://Components/Spikes.tscn" type="PackedScene" id=11]
[ext_resource path="res://Components/Player.tscn" type="PackedScene" id=12]
[ext_resource path="res://Sounds/Forest_Ambience.wav" type="AudioStream" id=13]
[ext_resource path="res://Worlds/Gate.gd" type="Script" id=14]
[ext_resource path="res://Tiles/generic_platformer_tiles.png" type="Texture" id=15]

[sub_resource type="Animation" id=1]

resource_name = "CloseGate"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -81.9589 ), Vector2( 0, 2.53483 ) ]
}

[sub_resource type="Animation" id=2]

length = 3.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 2.53483 ), Vector2( 0, -81.9589 ) ]
}

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 10, 32.917 )

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 1.33319, 268.667 )

[node name="Node" type="Node" index="0"]

script = ExtResource( 1 )
OBJECTIVE_COUNT = 1

[node name="TileMap" type="TileMap" parent="." index="0"]

mode = 0
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 32 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( -851939, 3, 0, -851938, 4, 0, -851937, 4, 0, -851936, 4, 0, -851935, 4, 0, -851934, 4, 0, -851933, 4, 0, -851932, 4, 0, -851931, 4, 0, -851930, 4, 0, -851929, 4, 0, -851928, 4, 0, -851927, 4, 0, -851926, 4, 0, -851925, 4, 0, -851924, 4, 0, -851923, 4, 0, -851922, 4, 0, -851921, 4, 0, -851920, 4, 0, -851919, 4, 0, -786403, 3, 0, -786402, 4, 0, -786401, 4, 0, -786400, 4, 0, -786399, 4, 0, -786398, 4, 0, -786397, 4, 0, -786396, 4, 0, -786395, 4, 0, -786394, 4, 0, -786393, 4, 0, -786392, 4, 0, -786391, 4, 0, -786390, 4, 0, -786389, 4, 0, -786388, 4, 0, -786387, 4, 0, -786386, 4, 0, -786385, 4, 0, -786384, 4, 0, -786383, 4, 0, -720867, 3, 0, -720866, 4, 0, -720865, 4, 0, -720864, 16, 0, -720863, 4, 0, -720862, 4, 0, -720861, 16, 0, -720860, 16, 0, -720859, 16, 0, -720858, 16, 0, -720857, 16, 0, -720856, 16, 0, -720855, 16, 0, -720854, 4, 0, -720853, 4, 0, -720852, 4, 0, -720851, 4, 0, -720850, 4, 0, -720849, 4, 0, -720848, 4, 0, -720847, 4, 0, -655331, 3, 0, -655330, 4, 0, -655329, 16, 0, -655328, 4, 0, -655327, 4, 0, -655326, 4, 0, -655325, 4, 0, -655324, 4, 0, -655323, 4, 0, -655322, 4, 0, -655321, 4, 0, -655320, 4, 0, -655319, 4, 0, -655318, 16, 0, -655317, 4, 0, -655316, 4, 0, -655315, 4, 0, -655314, 4, 0, -655313, 16, 0, -655312, 4, 0, -655311, 4, 0, -589795, 3, 0, -589794, 4, 0, -589793, 4, 0, -589792, 16, 0, -589791, 4, 0, -589790, 4, 0, -589789, 4, 0, -589788, 4, 0, -589787, 4, 0, -589786, 4, 0, -589785, 4, 0, -589784, 4, 0, -589783, 4, 0, -589782, 4, 0, -589781, 4, 0, -589780, 4, 0, -589779, 4, 0, -589778, 4, 0, -589777, 16, 0, -589776, 4, 0, -589775, 4, 0, -524259, 3, 0, -524258, 4, 0, -524257, 4, 0, -524256, 16, 0, -524255, 4, 0, -524254, 4, 0, -524253, 4, 0, -524252, 16, 0, -524251, 4, 0, -524250, 4, 0, -524249, 4, 0, -524248, 4, 0, -524247, 4, 0, -524246, 4, 0, -524245, 16, 0, -524244, 4, 0, -524243, 4, 0, -524242, 4, 0, -524241, 16, 0, -524240, 4, 0, -524239, 4, 0, -458723, 3, 0, -458722, 4, 0, -458721, 4, 0, -458720, 16, 0, -458719, 4, 0, -458718, 4, 0, -458717, 4, 0, -458716, 4, 0, -458715, 16, 0, -458714, 4, 0, -458713, 4, 0, -458712, 4, 0, -458711, 4, 0, -458710, 4, 0, -458709, 16, 0, -458708, 4, 0, -458707, 4, 0, -458706, 4, 0, -458705, 16, 0, -458704, 4, 0, -458703, 4, 0, -393187, 3, 0, -393186, 4, 0, -393185, 4, 0, -393184, 16, 0, -393183, 4, 0, -393182, 4, 0, -393181, 4, 0, -393180, 4, 0, -393179, 4, 0, -393178, 16, 0, -393177, 16, 0, -393176, 4, 0, -393175, 4, 0, -393174, 4, 0, -393173, 4, 0, -393172, 16, 0, -393171, 4, 0, -393170, 4, 0, -393169, 16, 0, -393168, 4, 0, -393167, 4, 0, -327651, 3, 0, -327650, 4, 0, -327649, 4, 0, -327648, 4, 0, -327647, 4, 0, -327646, 4, 0, -327645, 4, 0, -327644, 4, 0, -327643, 4, 0, -327642, 4, 0, -327641, 4, 0, -327640, 16, 0, -327639, 16, 0, -327638, 4, 0, -327637, 4, 0, -327636, 16, 0, -327635, 4, 0, -327634, 4, 0, -327633, 16, 0, -327632, 4, 0, -327631, 4, 0, -262115, 7, 0, -262114, 43, 0, -262113, 43, 0, -262112, 43, 0, -262111, 43, 0, -262110, 43, 0, -262109, 43, 0, -262108, 43, 0, -262107, 43, 0, -262106, 6, 0, -262105, 4, 0, -262104, 4, 0, -262103, 4, 0, -262102, 16, 0, -262101, 4, 0, -262100, 4, 0, -262099, 4, 0, -262098, 4, 0, -262097, 16, 0, -262096, 4, 0, -262095, 4, 0, -196570, 3, 0, -196569, 4, 0, -196568, 4, 0, -196567, 4, 0, -196566, 4, 0, -196565, 4, 0, -196564, 4, 0, -196563, 4, 0, -196562, 16, 0, -196561, 4, 0, -196560, 4, 0, -196559, 4, 0, -131034, 3, 0, -131033, 4, 0, -131032, 4, 0, -131031, 4, 0, -131030, 16, 0, -131029, 16, 0, -131028, 4, 0, -131027, 4, 0, -131026, 4, 0, -131025, 4, 0, -131024, 4, 0, -131023, 4, 0, -65507, 31, 0, -65506, 31, 0, -65505, 30, 0, -65503, 30, 0, -65502, 31, 0, -65501, 31, 0, -65500, 31, 0, -65499, 32, 0, -65498, 3, 0, -65497, 4, 0, -65496, 4, 0, -65495, 4, 0, -65494, 4, 0, -65493, 4, 0, -65492, 16, 0, -65491, 4, 0, -65490, 4, 0, -65489, 4, 0, -65488, 4, 0, -65487, 4, 0, 29, 40, 0, 30, 19, 0, 31, 19, 0, 32, 19, 0, 33, 19, 0, 34, 19, 0, 35, 19, 0, 36, 19, 0, 37, 19, 0, 38, 19, 0, 39, 19, 0, 40, 19, 0, 41, 19, 0, 42, 19, 0, 43, 19, 0, 44, 19, 0, 45, 19, 0, 46, 19, 0, 47, 19, 0, 48, 19, 0, 49, 19, 0, 65565, 5, 0, 65566, 43, 0, 65567, 43, 0, 65568, 43, 0, 65569, 43, 0, 65570, 43, 0, 65571, 6, 0, 65572, 4, 0, 65573, 16, 0, 65574, 4, 0, 65575, 4, 0, 65576, 4, 0, 65577, 4, 0, 65578, 4, 0, 65579, 4, 0, 65580, 4, 0, 65581, 4, 0, 65582, 4, 0, 65583, 4, 0, 65584, 4, 0, 65585, 4, 0, 131107, 3, 0, 131108, 4, 0, 131109, 16, 0, 131110, 4, 0, 131111, 4, 0, 131112, 4, 0, 131113, 4, 0, 131114, 16, 0, 131115, 16, 0, 131116, 4, 0, 131117, 4, 0, 131118, 4, 0, 131119, 4, 0, 131120, 16, 0, 131121, 4, 0, 196643, 3, 0, 196644, 4, 0, 196645, 16, 0, 196646, 16, 0, 196647, 4, 0, 196648, 4, 0, 196649, 16, 0, 196650, 16, 0, 196651, 4, 0, 196652, 4, 0, 196653, 4, 0, 196654, 4, 0, 196655, 16, 0, 196656, 4, 0, 196657, 4, 0, 327671, 28, 0, 327672, 28, 0, 327673, 28, 0, 327674, 28, 0, 327675, 28, 0, 327678, 33, 0, 262179, 3, 0, 262180, 4, 0, 262181, 16, 0, 262182, 16, 0, 262183, 4, 0, 262184, 4, 0, 262185, 16, 0, 262186, 4, 0, 262187, 4, 0, 262188, 4, 0, 262189, 4, 0, 262190, 4, 0, 262191, 16, 0, 262192, 4, 0, 262193, 4, 0, 393201, 29, 0, 393214, 33, 0, 327696, 31, 0, 327697, 31, 0, 327698, 31, 0, 327699, 31, 0, 327700, 31, 0, 327701, 31, 0, 327702, 31, 0, 327703, 31, 0, 327704, 31, 0, 327705, 31, 0, 327706, 31, 0, 327707, 31, 0, 327708, 31, 0, 327709, 31, 0, 327710, 31, 0, 327711, 32, 0, 327712, 30, 0, 327713, 31, 0, 327714, 30, 0, 327715, 3, 0, 327716, 4, 0, 327717, 4, 0, 327718, 4, 0, 327719, 4, 0, 327720, 4, 0, 327721, 4, 0, 327722, 4, 0, 327723, 4, 0, 327724, 4, 0, 327725, 4, 0, 327726, 4, 0, 327727, 16, 0, 327728, 4, 0, 327729, 4, 0, 458737, 31, 0, 458738, 31, 0, 458739, 32, 0, 458740, 31, 0, 458741, 30, 0, 458742, 30, 0, 458743, 31, 0, 458744, 31, 0, 458745, 31, 0, 458746, 31, 0, 458747, 31, 0, 458748, 31, 0, 458749, 31, 0, 458750, 33, 0, 458751, 31, 0, 393216, 31, 0, 393217, 31, 0, 393218, 31, 0, 393219, 31, 0, 393220, 32, 0, 393221, 31, 0, 393222, 31, 0, 393223, 31, 0, 393224, 30, 0, 393225, 30, 0, 393226, 32, 0, 393227, 31, 0, 393228, 31, 0, 393229, 31, 0, 393232, 0, 0, 393233, 44, 0, 393234, 44, 0, 393235, 44, 0, 393236, 44, 0, 393237, 44, 0, 393238, 44, 0, 393239, 44, 0, 393240, 44, 0, 393241, 44, 0, 393242, 44, 0, 393243, 44, 0, 393244, 44, 0, 393245, 44, 0, 393246, 44, 0, 393247, 44, 0, 393248, 44, 0, 393249, 44, 0, 393250, 44, 0, 393251, 44, 0, 393252, 44, 0, 393253, 44, 0, 393254, 44, 0, 393255, 44, 0, 393256, 44, 0, 393257, 44, 0, 393258, 44, 0, 393259, 44, 0, 393260, 44, 0, 393261, 44, 0, 393262, 16, 0, 393263, 16, 0, 393264, 44, 0, 393265, 44, 0, 524273, 19, 0, 524274, 19, 0, 524275, 19, 0, 524276, 19, 0, 524277, 19, 0, 524278, 19, 0, 524279, 19, 0, 524280, 19, 0, 524281, 19, 0, 524282, 19, 0, 524283, 19, 0, 524284, 19, 0, 524285, 19, 0, 524286, 19, 0, 524287, 19, 0, 458752, 19, 0, 458753, 19, 0, 458754, 19, 0, 458755, 19, 0, 458756, 19, 0, 458757, 19, 0, 458758, 19, 0, 458759, 19, 0, 458760, 19, 0, 458761, 19, 0, 458762, 19, 0, 458763, 19, 0, 458764, 19, 0, 458765, 41, 0, 458787, 3, 0, 458788, 4, 0, 458789, 4, 0, 458790, 4, 0, 458791, 16, 0, 458792, 4, 0, 458793, 4, 0, 458794, 4, 0, 458795, 4, 0, 458796, 4, 0, 458797, 16, 0, 458798, 4, 0, 458799, 4, 0, 458800, 4, 0, 458801, 4, 0, 589809, 4, 0, 589810, 4, 0, 589811, 4, 0, 589812, 4, 0, 589813, 4, 0, 589814, 4, 0, 589815, 4, 0, 589816, 4, 0, 589817, 4, 0, 589818, 16, 0, 589819, 4, 0, 589820, 4, 0, 589821, 4, 0, 589822, 4, 0, 589823, 4, 0, 524288, 4, 0, 524289, 4, 0, 524290, 4, 0, 524291, 4, 0, 524292, 4, 0, 524293, 4, 0, 524294, 4, 0, 524295, 4, 0, 524296, 4, 0, 524297, 4, 0, 524298, 4, 0, 524299, 4, 0, 524300, 4, 0, 524301, 4, 0, 524302, 41, 0, 524323, 3, 0, 524324, 4, 0, 524325, 4, 0, 524326, 16, 0, 524327, 4, 0, 524328, 4, 0, 524329, 4, 0, 524330, 4, 0, 524331, 16, 0, 524332, 16, 0, 524333, 4, 0, 524334, 4, 0, 524335, 4, 0, 524336, 4, 0, 524337, 4, 0, 655345, 4, 0, 655346, 4, 0, 655347, 16, 0, 655348, 16, 0, 655349, 16, 0, 655350, 4, 0, 655351, 4, 0, 655352, 4, 0, 655353, 4, 0, 655354, 16, 0, 655355, 4, 0, 655356, 4, 0, 655357, 16, 0, 655358, 16, 0, 655359, 16, 0, 589824, 4, 0, 589825, 4, 0, 589826, 4, 0, 589827, 4, 0, 589828, 4, 0, 589829, 4, 0, 589830, 4, 0, 589831, 4, 0, 589832, 4, 0, 589833, 4, 0, 589834, 16, 0, 589835, 4, 0, 589836, 4, 0, 589837, 4, 0, 589838, 4, 0, 589839, 41, 0, 589852, 31, 0, 589853, 31, 0, 589854, 32, 0, 589857, 30, 0, 589859, 3, 0, 589860, 4, 0, 589861, 16, 0, 589862, 4, 0, 589863, 4, 0, 589864, 4, 0, 589865, 4, 0, 589866, 16, 0, 589867, 16, 0, 589868, 4, 0, 589869, 4, 0, 589870, 4, 0, 589871, 4, 0, 589872, 4, 0, 589873, 4, 0, 720881, 4, 0, 720882, 4, 0, 720883, 16, 0, 720884, 4, 0, 720885, 4, 0, 720886, 4, 0, 720887, 4, 0, 720888, 4, 0, 720889, 4, 0, 720890, 16, 0, 720891, 4, 0, 720892, 4, 0, 720893, 4, 0, 720894, 4, 0, 720895, 4, 0, 655360, 16, 0, 655361, 16, 0, 655362, 16, 0, 655363, 16, 0, 655364, 16, 0, 655365, 16, 0, 655366, 4, 0, 655367, 4, 0, 655368, 4, 0, 655369, 16, 0, 655370, 16, 0, 655371, 4, 0, 655372, 4, 0, 655373, 4, 0, 655374, 4, 0, 655375, 4, 0, 655376, 19, 0, 655377, 41, 0, 655388, 40, 0, 655389, 19, 0, 655390, 19, 0, 655391, 19, 0, 655392, 19, 0, 655393, 19, 0, 655394, 19, 0, 655395, 19, 0, 655396, 19, 0, 655397, 19, 0, 655398, 19, 0, 655399, 19, 0, 655400, 19, 0, 655401, 19, 0, 655402, 19, 0, 655403, 19, 0, 655404, 19, 0, 655405, 19, 0, 655406, 19, 0, 655407, 19, 0, 655408, 19, 0, 655409, 19, 0, 786417, 4, 0, 786418, 16, 0, 786419, 4, 0, 786420, 4, 0, 786421, 4, 0, 786422, 4, 0, 786423, 4, 0, 786424, 4, 0, 786425, 16, 0, 786426, 4, 0, 786427, 4, 0, 786428, 4, 0, 786429, 4, 0, 786430, 4, 0, 786431, 4, 0, 720896, 16, 0, 720897, 4, 0, 720898, 4, 0, 720899, 4, 0, 720900, 4, 0, 720901, 16, 0, 720902, 4, 0, 720903, 4, 0, 720904, 4, 0, 720905, 16, 0, 720906, 4, 0, 720907, 16, 0, 720908, 4, 0, 720909, 4, 0, 720910, 4, 0, 720911, 4, 0, 720912, 4, 0, 720913, 12, 0, 720924, 3, 0, 720925, 4, 0, 720926, 4, 0, 720927, 4, 0, 720928, 4, 0, 720929, 4, 0, 720930, 4, 0, 720931, 4, 0, 720932, 4, 0, 720933, 4, 0, 720934, 4, 0, 720935, 4, 0, 720936, 4, 0, 720937, 4, 0, 720938, 4, 0, 720939, 4, 0, 720940, 4, 0, 720941, 4, 0, 720942, 4, 0, 720943, 4, 0, 720944, 4, 0, 720945, 4, 0, 851953, 4, 0, 851954, 16, 0, 851955, 4, 0, 851956, 4, 0, 851957, 4, 0, 851958, 4, 0, 851959, 4, 0, 851960, 4, 0, 851961, 4, 0, 851962, 16, 0, 851963, 4, 0, 851964, 4, 0, 851965, 4, 0, 851966, 4, 0, 851967, 4, 0, 786432, 16, 0, 786433, 4, 0, 786434, 4, 0, 786435, 4, 0, 786436, 4, 0, 786437, 4, 0, 786438, 4, 0, 786439, 4, 0, 786440, 4, 0, 786441, 4, 0, 786442, 16, 0, 786443, 4, 0, 786444, 16, 0, 786445, 4, 0, 786446, 4, 0, 786447, 4, 0, 786448, 4, 0, 786449, 12, 0, 786460, 3, 0, 786461, 4, 0, 786462, 16, 0, 786463, 4, 0, 786464, 4, 0, 786465, 16, 0, 786466, 16, 0, 786467, 4, 0, 786468, 4, 0, 786469, 4, 0, 786470, 16, 0, 786471, 4, 0, 786472, 4, 0, 786473, 4, 0, 786474, 16, 0, 786475, 4, 0, 786476, 4, 0, 786477, 4, 0, 786478, 4, 0, 786479, 4, 0, 786480, 4, 0, 786481, 4, 0, 917489, 4, 0, 917490, 4, 0, 917491, 16, 0, 917492, 4, 0, 917493, 4, 0, 917494, 16, 0, 917495, 4, 0, 917496, 4, 0, 917497, 4, 0, 917498, 16, 0, 917499, 16, 0, 917500, 4, 0, 917501, 4, 0, 917502, 4, 0, 917503, 4, 0, 851968, 4, 0, 851969, 16, 0, 851970, 4, 0, 851971, 4, 0, 851972, 4, 0, 851973, 4, 0, 851974, 16, 0, 851975, 4, 0, 851976, 4, 0, 851977, 4, 0, 851978, 4, 0, 851979, 4, 0, 851980, 4, 0, 851981, 4, 0, 851982, 4, 0, 851983, 4, 0, 851984, 4, 0, 851985, 12, 0, 851996, 3, 0, 851997, 4, 0, 851998, 16, 0, 851999, 4, 0, 852000, 4, 0, 852001, 16, 0, 852002, 4, 0, 852003, 4, 0, 852004, 4, 0, 852005, 4, 0, 852006, 16, 0, 852007, 4, 0, 852008, 4, 0, 852009, 4, 0, 852010, 16, 0, 852011, 4, 0, 852012, 4, 0, 852013, 16, 0, 852014, 4, 0, 852015, 4, 0, 852016, 4, 0, 852017, 4, 0, 983025, 4, 0, 983026, 4, 0, 983027, 16, 0, 983028, 4, 0, 983029, 4, 0, 983030, 16, 0, 983031, 4, 0, 983032, 4, 0, 983033, 4, 0, 983034, 4, 0, 983035, 4, 0, 983036, 16, 0, 983037, 4, 0, 983038, 4, 0, 983039, 4, 0, 917504, 16, 0, 917505, 16, 0, 917506, 4, 0, 917507, 4, 0, 917508, 4, 0, 917509, 16, 0, 917510, 4, 0, 917511, 4, 0, 917512, 4, 0, 917513, 4, 0, 917514, 16, 0, 917515, 16, 0, 917516, 16, 0, 917517, 16, 0, 917518, 4, 0, 917519, 4, 0, 917520, 4, 0, 917521, 12, 0, 917532, 3, 0, 917533, 16, 0, 917534, 4, 0, 917535, 4, 0, 917536, 16, 0, 917537, 4, 0, 917538, 4, 0, 917539, 4, 0, 917540, 4, 0, 917541, 4, 0, 917542, 16, 0, 917543, 4, 0, 917544, 4, 0, 917545, 16, 0, 917546, 16, 0, 917547, 4, 0, 917548, 4, 0, 917549, 16, 0, 917550, 16, 0, 917551, 4, 0, 917552, 4, 0, 917553, 4, 0, 1048561, 4, 0, 1048562, 4, 0, 1048563, 16, 0, 1048564, 4, 0, 1048565, 4, 0, 1048566, 16, 0, 1048567, 4, 0, 1048568, 4, 0, 1048569, 4, 0, 1048570, 4, 0, 1048571, 4, 0, 1048572, 4, 0, 1048573, 4, 0, 1048574, 4, 0, 1048575, 16, 0, 983040, 4, 0, 983041, 4, 0, 983042, 4, 0, 983043, 4, 0, 983044, 16, 0, 983045, 16, 0, 983046, 4, 0, 983047, 4, 0, 983048, 16, 0, 983049, 16, 0, 983050, 4, 0, 983051, 4, 0, 983052, 4, 0, 983053, 4, 0, 983054, 4, 0, 983055, 4, 0, 983056, 4, 0, 983057, 12, 0, 983068, 3, 0, 983069, 16, 0, 983070, 16, 0, 983071, 4, 0, 983072, 16, 0, 983073, 4, 0, 983074, 4, 0, 983075, 4, 0, 983076, 4, 0, 983077, 4, 0, 983078, 16, 0, 983079, 4, 0, 983080, 4, 0, 983081, 16, 0, 983082, 4, 0, 983083, 4, 0, 983084, 4, 0, 983085, 4, 0, 983086, 16, 0, 983087, 4, 0, 983088, 4, 0, 983089, 4, 0, 1114097, 4, 0, 1114098, 4, 0, 1114099, 4, 0, 1114100, 4, 0, 1114101, 4, 0, 1114102, 4, 0, 1114103, 16, 0, 1114104, 4, 0, 1114105, 4, 0, 1114106, 16, 0, 1114107, 16, 0, 1114108, 4, 0, 1114109, 4, 0, 1114110, 4, 0, 1114111, 4, 0, 1048576, 4, 0, 1048577, 4, 0, 1048578, 4, 0, 1048579, 4, 0, 1048580, 4, 0, 1048581, 4, 0, 1048582, 4, 0, 1048583, 4, 0, 1048584, 16, 0, 1048585, 4, 0, 1048586, 4, 0, 1048587, 4, 0, 1048588, 4, 0, 1048589, 4, 0, 1048590, 4, 0, 1048591, 4, 0, 1048592, 4, 0, 1048593, 12, 0, 1048594, 35, 0, 1048595, 35, 0, 1048596, 35, 0, 1048597, 35, 0, 1048598, 35, 0, 1048599, 35, 0, 1048600, 35, 0, 1048601, 35, 0, 1048602, 35, 0, 1048603, 35, 0, 1048604, 3, 0, 1048605, 16, 0, 1048606, 16, 0, 1048607, 4, 0, 1048608, 16, 0, 1048609, 4, 0, 1048610, 4, 0, 1048611, 16, 0, 1048612, 4, 0, 1048613, 4, 0, 1048614, 16, 0, 1048615, 4, 0, 1048616, 16, 0, 1048617, 16, 0, 1048618, 4, 0, 1048619, 4, 0, 1048620, 4, 0, 1048621, 16, 0, 1048622, 16, 0, 1048623, 4, 0, 1048624, 4, 0, 1048625, 4, 0, 1179633, 4, 0, 1179634, 4, 0, 1179635, 4, 0, 1179636, 4, 0, 1179637, 4, 0, 1179638, 4, 0, 1179639, 4, 0, 1179640, 16, 0, 1179641, 16, 0, 1179642, 4, 0, 1179643, 4, 0, 1179644, 4, 0, 1179645, 4, 0, 1179646, 4, 0, 1179647, 4, 0, 1114112, 4, 0, 1114113, 4, 0, 1114114, 4, 0, 1114115, 4, 0, 1114116, 16, 0, 1114117, 4, 0, 1114118, 4, 0, 1114119, 4, 0, 1114120, 4, 0, 1114121, 16, 0, 1114122, 4, 0, 1114123, 4, 0, 1114124, 4, 0, 1114125, 4, 0, 1114126, 4, 0, 1114127, 4, 0, 1114128, 4, 0, 1114129, 12, 0, 1114130, 35, 0, 1114131, 35, 0, 1114132, 35, 0, 1114133, 35, 0, 1114134, 35, 0, 1114135, 35, 0, 1114136, 35, 0, 1114137, 35, 0, 1114138, 35, 0, 1114139, 35, 0, 1114140, 3, 0, 1114141, 4, 0, 1114142, 4, 0, 1114143, 4, 0, 1114144, 16, 0, 1114145, 4, 0, 1114146, 16, 0, 1114147, 16, 0, 1114148, 4, 0, 1114149, 4, 0, 1114150, 16, 0, 1114151, 4, 0, 1114152, 4, 0, 1114153, 16, 0, 1114154, 4, 0, 1114155, 4, 0, 1114156, 4, 0, 1114157, 4, 0, 1114158, 16, 0, 1114159, 16, 0, 1114160, 4, 0, 1114161, 4, 0, 1245169, 4, 0, 1245170, 4, 0, 1245171, 4, 0, 1245172, 4, 0, 1245173, 4, 0, 1245174, 4, 0, 1245175, 4, 0, 1245176, 4, 0, 1245177, 4, 0, 1245178, 4, 0, 1245179, 4, 0, 1245180, 4, 0, 1245181, 4, 0, 1245182, 4, 0, 1245183, 4, 0, 1179648, 4, 0, 1179649, 4, 0, 1179650, 16, 0, 1179651, 4, 0, 1179652, 16, 0, 1179653, 4, 0, 1179654, 4, 0, 1179655, 4, 0, 1179656, 4, 0, 1179657, 16, 0, 1179658, 4, 0, 1179659, 4, 0, 1179660, 4, 0, 1179661, 16, 0, 1179662, 16, 0, 1179663, 4, 0, 1179664, 4, 0, 1179665, 12, 0, 1179666, 35, 0, 1179667, 35, 0, 1179668, 35, 0, 1179669, 35, 0, 1179670, 35, 0, 1179671, 35, 0, 1179672, 35, 0, 1179673, 35, 0, 1179674, 35, 0, 1179675, 35, 0, 1179676, 3, 0, 1179677, 4, 0, 1179678, 4, 0, 1179679, 4, 0, 1179680, 16, 0, 1179681, 4, 0, 1179682, 16, 0, 1179683, 4, 0, 1179684, 4, 0, 1179685, 4, 0, 1179686, 4, 0, 1179687, 16, 0, 1179688, 4, 0, 1179689, 4, 0, 1179690, 4, 0, 1179691, 4, 0, 1179692, 4, 0, 1179693, 4, 0, 1179694, 4, 0, 1179695, 4, 0, 1179696, 4, 0, 1179697, 4, 0, 1245184, 4, 0, 1245185, 4, 0, 1245186, 16, 0, 1245187, 4, 0, 1245188, 16, 0, 1245189, 4, 0, 1245190, 4, 0, 1245191, 4, 0, 1245192, 4, 0, 1245193, 16, 0, 1245194, 4, 0, 1245195, 4, 0, 1245196, 4, 0, 1245197, 4, 0, 1245198, 16, 0, 1245199, 4, 0, 1245200, 4, 0, 1245201, 12, 0, 1245202, 35, 0, 1245203, 35, 0, 1245204, 35, 0, 1245205, 35, 0, 1245206, 35, 0, 1245207, 35, 0, 1245208, 35, 0, 1245209, 35, 0, 1245210, 35, 0, 1245211, 35, 0, 1245212, 3, 0, 1245213, 4, 0, 1245214, 4, 0, 1245215, 16, 0, 1245216, 4, 0, 1245217, 4, 0, 1245218, 16, 0, 1245219, 4, 0, 1245227, 4, 0, 1245228, 4, 0, 1245229, 4, 0, 1245230, 4, 0, 1245231, 4, 0, 1245232, 4, 0, 1245233, 4, 0, 1310720, 4, 0, 1310721, 4, 0, 1310722, 16, 0, 1310723, 4, 0, 1310724, 16, 0, 1310725, 4, 0, 1310726, 4, 0, 1310727, 4, 0, 1310728, 16, 0, 1310729, 16, 0, 1310730, 4, 0, 1310731, 4, 0, 1310732, 16, 0, 1310733, 4, 0, 1310734, 16, 0, 1310735, 4, 0, 1310736, 4, 0, 1310737, 12, 0, 1310738, 35, 0, 1310739, 35, 0, 1310740, 35, 0, 1310741, 35, 0, 1310742, 35, 0, 1310743, 35, 0, 1310744, 35, 0, 1310745, 35, 0, 1310746, 35, 0, 1310747, 35, 0, 1310748, 3, 0, 1310749, 4, 0, 1310750, 4, 0, 1310751, 4, 0, 1310752, 4, 0, 1310753, 4, 0, 1310754, 4, 0, 1310755, 4, 0, 1376256, 4, 0, 1376257, 4, 0, 1376258, 16, 0, 1376259, 4, 0, 1376260, 16, 0, 1376261, 4, 0, 1376262, 4, 0, 1376263, 4, 0, 1376264, 4, 0, 1376265, 4, 0, 1376266, 4, 0, 1376267, 16, 0, 1376268, 4, 0, 1376269, 4, 0, 1376270, 16, 0, 1376271, 4, 0, 1376272, 4, 0, 1376273, 12, 0, 1376274, 35, 0, 1376275, 35, 0, 1376276, 35, 0, 1376277, 35, 0, 1376278, 35, 0, 1376279, 35, 0, 1376280, 35, 0, 1376281, 35, 0, 1376282, 35, 0, 1376283, 35, 0, 1376284, 3, 0, 1376285, 4, 0, 1376286, 4, 0, 1376287, 4, 0, 1376288, 4, 0, 1376289, 4, 0, 1376290, 4, 0, 1376291, 4, 0, 1441792, 4, 0, 1441793, 4, 0, 1441794, 16, 0, 1441795, 4, 0, 1441796, 4, 0, 1441797, 16, 0, 1441798, 4, 0, 1441799, 4, 0, 1441800, 4, 0, 1441801, 4, 0, 1441802, 4, 0, 1441803, 16, 0, 1441804, 4, 0, 1441805, 4, 0, 1441806, 16, 0, 1441807, 4, 0, 1441808, 4, 0, 1441809, 12, 0, 1441810, 35, 0, 1441811, 35, 0, 1441812, 35, 0, 1441813, 35, 0, 1441814, 35, 0, 1441815, 35, 0, 1441816, 35, 0, 1441817, 35, 0, 1441818, 35, 0, 1441819, 35, 0, 1441820, 3, 0, 1441821, 16, 0, 1441822, 16, 0, 1441823, 16, 0, 1441824, 4, 0, 1441825, 4, 0, 1441826, 16, 0, 1441827, 4, 0, 1507328, 4, 0, 1507329, 4, 0, 1507330, 16, 0, 1507331, 4, 0, 1507332, 4, 0, 1507333, 4, 0, 1507334, 16, 0, 1507335, 16, 0, 1507336, 16, 0, 1507337, 4, 0, 1507338, 4, 0, 1507339, 4, 0, 1507340, 4, 0, 1507341, 4, 0, 1507342, 16, 0, 1507343, 4, 0, 1507344, 4, 0, 1507345, 12, 0, 1507346, 35, 0, 1507347, 35, 0, 1507348, 35, 0, 1507349, 35, 0, 1507350, 35, 0, 1507351, 35, 0, 1507352, 35, 0, 1507353, 35, 0, 1507354, 35, 0, 1507355, 35, 0, 1507356, 3, 0, 1507357, 4, 0, 1507358, 4, 0, 1507359, 4, 0, 1507360, 16, 0, 1507361, 16, 0, 1507362, 4, 0, 1507363, 4, 0, 1572864, 4, 0, 1572865, 4, 0, 1572866, 4, 0, 1572867, 4, 0, 1572868, 4, 0, 1572869, 4, 0, 1572870, 4, 0, 1572871, 4, 0, 1572872, 4, 0, 1572873, 4, 0, 1572874, 4, 0, 1572875, 4, 0, 1572876, 4, 0, 1572877, 4, 0, 1572878, 4, 0, 1572879, 4, 0, 1572880, 4, 0, 1572881, 12, 0, 1572882, 35, 0, 1572883, 35, 0, 1572884, 35, 0, 1572885, 35, 0, 1572886, 35, 0, 1572887, 35, 0, 1572888, 35, 0, 1572889, 35, 0, 1572890, 35, 0, 1572891, 35, 0, 1572892, 4, 0, 1572893, 4, 0, 1572894, 4, 0, 1572895, 4, 0, 1572896, 4, 0, 1572897, 4, 0, 1572898, 4, 0, 1572899, 4, 0 )
_sections_unfolded = [ "Cell" ]
__meta__ = {
"_edit_lock_": true
}

[node name="ParallaxBackground" parent="." index="1" instance=ExtResource( 3 )]

[node name="Platform" parent="." index="2" instance=ExtResource( 4 )]

position = Vector2( 656.687, 336.85 )

[node name="Platform2" parent="." index="3" instance=ExtResource( 4 )]

position = Vector2( 720.169, 336.991 )

[node name="Platform3" parent="." index="4" instance=ExtResource( 4 )]

position = Vector2( 688.478, 336.959 )

[node name="Platform4" parent="." index="5" instance=ExtResource( 4 )]

position = Vector2( 752.15, 336.991 )

[node name="Platform5" parent="." index="6" instance=ExtResource( 4 )]

position = Vector2( 784.037, 337.088 )

[node name="Platform6" parent="." index="7" instance=ExtResource( 4 )]

position = Vector2( 816.066, 337.088 )

[node name="Platform9" parent="." index="8" instance=ExtResource( 4 )]

position = Vector2( 746.369, 95.3684 )

[node name="Platform10" parent="." index="9" instance=ExtResource( 4 )]

position = Vector2( 817.868, 58.8246 )

[node name="Platform11" parent="." index="10" instance=ExtResource( 4 )]

position = Vector2( 884.169, 27.5755 )

[node name="Door" parent="." index="11" instance=ExtResource( 5 )]

position = Vector2( 991.64, 275.673 )

[node name="Objective" parent="." index="12" instance=ExtResource( 6 )]

position = Vector2( 1148.68, -33.5794 )

[node name="Sound" type="AudioStreamPlayer2D" parent="Objective" index="4"]

stream = null
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="Monster" parent="." index="13" instance=ExtResource( 7 )]

position = Vector2( 826.938, 178.379 )
ACC = 100
JUMP = 1.5

[node name="Portal" parent="." index="14" instance=ExtResource( 8 )]

position = Vector2( 1056, 160 )

[node name="Lever" parent="." index="15" instance=ExtResource( 9 )]

position = Vector2( 1136.48, 277.81 )
targetNode = "Gate"
persistent = false

[node name="Key" parent="." index="16" instance=ExtResource( 10 )]

position = Vector2( 1039.82, 152.752 )

[node name="Spikes" type="Node" parent="." index="17"]

editor/display_folded = true

[node name="Spikes" parent="Spikes" index="0" instance=ExtResource( 11 )]

position = Vector2( 614.583, 478.273 )

[node name="Spikes2" parent="Spikes" index="1" instance=ExtResource( 11 )]

position = Vector2( 675.542, 477.785 )

[node name="Spikes3" parent="Spikes" index="2" instance=ExtResource( 11 )]

position = Vector2( 738.452, 478.273 )

[node name="Spikes4" parent="Spikes" index="3" instance=ExtResource( 11 )]

position = Vector2( 804.776, 477.298 )

[node name="Spikes5" parent="Spikes" index="4" instance=ExtResource( 11 )]

position = Vector2( 858.909, 477.298 )

[node name="Player" parent="." index="18" instance=ExtResource( 12 )]

editor/display_folded = true
position = Vector2( -24.1174, 191.432 )

[node name="Music" type="AudioStreamPlayer2D" parent="Player" index="11"]

stream = ExtResource( 13 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = true
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="Gate" type="StaticBody2D" parent="." index="19"]

position = Vector2( 1040, -56 )
scale = Vector2( 1, 1.18352 )
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
script = ExtResource( 14 )
_sections_unfolded = [ "Collision" ]
__meta__ = {
"_edit_group_": true
}

[node name="Gate" type="Sprite" parent="Gate" index="0"]

editor/display_folded = true
position = Vector2( 0, 6.7595 )
scale = Vector2( 1, 1.26741 )
texture = ExtResource( 15 )
region_enabled = true
region_rect = Rect2( 704, 96, 32, 64 )
_sections_unfolded = [ "Region", "Transform", "Visibility" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Gate/Gate" index="0"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/CloseGate = SubResource( 1 )
anims/OpenGate = SubResource( 2 )
blend_times = [  ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Gate" index="1"]

position = Vector2( -0.617065, 7.04752 )
scale = Vector2( 1.38809, 1.19622 )
shape = SubResource( 3 )

[node name="Camera2D" type="Camera2D" parent="Gate" index="2"]

anchor_mode = 1
rotating = false
current = false
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false
_sections_unfolded = [ "Limit" ]

[node name="StaticBody2D" type="StaticBody2D" parent="." index="20"]

position = Vector2( 627.652, 181.989 )
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D" index="0"]

position = Vector2( 1.3631, -116.349 )
scale = Vector2( 1.31457, 0.571723 )
shape = SubResource( 4 )
one_way_collision = true


